--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ file(GLOB_RECURSE IMC_HEADERS "${PROJECT_SOURCE_DIR}/IMC/*.hpp")
 # create a library using all of IMC sources /  headers 
 add_library(imc ${IMC_HEADERS} ${IMC_SOURCES})
 add_library(say-hello hello.hpp hello.cpp)
+add_library(udp UDP/DatagramSocket.cpp)
 
 # Add program to list
 add_executable(HomeworkExercise homeworkExercise.cpp)
